# robot_calibration

robot_calibration/: CMakeLists.txt  package.xml
robot_calibration/include/robot_calibration/: calibration_offset_parser.h  camera_info.h
robot_calibration/include/robot_calibration/capture/: chain_manager.h  checkerboard_finder2d.h  chilitag_finder2d.h  feature_finder.h  rgb_camera.h
robot_calibration/include/robot_calibration/ceres/: camera2d_to_arm_error.h
robot_calibration/include/robot_calibration/models/: camera2d.h  chain.h
robot_calibration/scripts/: generate_poses.py
robot_calibration/src/: calibrate.cpp  calibration_offset_parser.cpp  chain_manager.cpp  checkerboard_finder.cpp  checkerboard_finder2d.cpp  chilitag_finder2d.cpp  feature_finder.cpp  led_finder.cpp  models.cpp  optimizer.cpp
robot_calibration/test/: chain_manager_tests.cpp
robot_calibration_tests/: CMakeLists.txt  package.xml
robot_calibration_tests/config/: calibrate.yaml  calibrate_zoom.yaml  calibration_poses.bag  calibration_poses_50.bag  calibration_poses_atex.bag  calibration_poses_new.bag  calibration_poses_old.bag  capture.yaml
robot_calibration_tests/launch/: calibrate.launch  calibrate_bag.launch  calibrate_bagposes.launch  calibrate_from_bag.launch  calibrate_manual.launch  capture.launch  chilitag_finder2d.launch  sim_calibrate_bagposes.launch  sim_calibrate_from_bag.launch  simulation.launch
robot_calibration_tests/scripts/: positions.py
robot_calibration_tests/src/: checkerboard_finder_2d_node.cpp
robot_calibration_tests/urdf/: argo_tracker_with_error.urdf  head_with_checkerboard.urdf.xacro
